--- a/P2_4.ipynb
+++ b/P2_4.ipynb
@@ -326,21 +326,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H0rfUHLXf0GB",
-        "outputId": "e28c0deb-2865-4353-d9b5-5064fe712b41"
+        "outputId": "89fcd082-ee08-4dbd-b1ca-517ac86627d3"
       },
       "source": [
         "# test strat_(d) after shuffle the order of boxes\n",
         "random.shuffle(boxes)\n",
         "print(boxes)\n",
-        "print(strat_c(boxes))"
+        "print(strat_d(boxes))"
       ],
-      "execution_count": 11,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Artik', 'Bingyan', 'Dishant', 'Fangyuan', 'Chen', 'Eran']\n",
+            "['Artik', 'Bingyan', 'Chen', 'Fangyuan', 'Eran', 'Dishant']\n",
             "True\n"
           ]
         }
